syntax = "proto3";

option java_package = "io.grpc.examples";

package namenodeproto;

// The NameNode service definition.
service NameNodeSer {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {};
}

// The Request message containing the user's name.
message HelloRequest {
  string hello = 1;
}
// The response message containing the greetings
message HelloReply {
  string reply = 1;
}
